# PTCGLimitlessRareCards

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build_exe.bat  cli_app.py  config.json  gui_app.py  gui_widgets.py  index.html  limitless_scraper.py  pyproject.toml  regulation_data.json  regulation_filter.py  requirements-dev.txt  requirements.txt  run_gui.bat  run_gui.py  test_pyinstaller_compat.py  test_scraper.py
.github/workflows/: ci.yml
docs/: index.html
docs/data/: cards.json
scripts/: fetch_dups.py  fetch_regulations.py  generate_web_data.py
tests/: test_cache.py  test_cli.py  test_config.py  test_regulation_filter.py  test_scraper.py
