[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "limitlesstcg-scraper"
version = "1.0.0"
description = "Scraper for LimitlessTCG to find rare placing cards from Japanese tournaments"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "BLE001", "F841", "E501"]
"test_*" = ["S101", "BLE001", "F841", "E501"]
"test_pyinstaller_compat.py" = ["S101", "BLE001", "F841", "E501"]
"cli_app.py" = ["BLE001", "E501"]
"scripts/*" = ["BLE001", "S110"]
"gui_app.py" = ["BLE001", "E501"]
"gui_widgets.py" = ["BLE001"]
"limitless_scraper.py" = ["BLE001", "E501"]
"run_gui.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
